<resources>
    <string name="app_name">SocialPlus</string>
    <string name="Email">Email: </string>
    <string name="Password">Password: </string>
    <string name="CPassword">Comfirm Password: </string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nam">Male</string>
    <string name="nu">Female</string>
    <string name="birth">Date Of Birth:</string>
    <string name="title_activity_chatbox">ChatboxActivity</string>
    <string name="forgotpassword">FORGOT PASSWORD</string>
    <string name="Comfirm">Comfirm</string>
    <string name="newpassword">New password:</string>
    <string name="back">Back Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="fullname">Full Name:</string>
    <string name="username">User Name</string>
    <string name="useremail">User Email</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="post">Post</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">HOME fragment</string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="birthday">Birthday</string>
    <string name="searching_for">Searching for...</string>
    <string name="change_user_info">Change user infomation</string>
    <string name="name_change">New Fullname:</string>
    <string name="change_now">Change Now</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="create_new_account">Create New Account</string>
    <string name="follow">follow</string>
    <string name="following">Following</string>
    <string name="backbtn">backBtn</string>
    <string name="sendmessage">sendMessage</string>
    <string name="sender_message_display_here">Sender Message Display Here</string>
    <string name="time">00:00</string>
    <string name="receiver_message_display_here">Receiver Message Display Here</string>
</resources>