<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/giaodien1"
    tools:context=".RegisterActivity">

    <TextView
        android:text="@string/create_new_account"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/picture">

        <ImageView

            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/login_account_circle_24"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailFrame"
        android:layout_below="@id/picture"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:id="@+id/passwordFrame"
        android:layout_below="@id/emailFrame"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:id="@+id/comfirmPasswordFrame"
        android:layout_below="@id/passwordFrame"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/comfirmPassword"
            android:inputType="textPassword"
            android:hint="@string/CPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:id="@+id/fullNameFrame"
        android:layout_below="@id/comfirmPasswordFrame">
        <EditText
            android:id="@+id/fullName"
            android:inputType="text"
            android:hint="@string/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/fullNameFrame"
        android:id="@+id/gender">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nam"
            android:textColor="@color/black"
            android:id="@+id/nam"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nu"
            android:textColor="@color/black"
            android:id="@+id/nu"
            />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/birthFrame"
        android:layout_below="@id/gender">

        <EditText
            android:id="@+id/birth"
            android:inputType="datetime"
            android:hint="@string/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:text="@string/register"

        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthFrame"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/registerBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="17sp"
            android:paddingLeft="40dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            android:textColor="#FF0000"
            android:autoLink="all" />
    </LinearLayout>
</RelativeLayout>