<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/giaodien1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcomeBack"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/login_to_continue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#6E6E6E"
        android:textSize="25sp"
        android:layout_below="@id/welcomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/login_account_circle_24"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailFrame">

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="#616161"
        android:textColor="@color/black"
        android:id="@+id/passwordFrame"
        android:layout_below="@id/emailFrame"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LoginBtn"
        android:text="@string/login"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordFrame"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/forgotpassword"
        android:layout_below="@id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_alignParentEnd="true"
        android:background="#00000000"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        android:layout_below="@id/LoginBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="17sp"
            android:paddingLeft="40dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:autoLink="all"
            android:text="@string/register"
            android:textColor="#FF0000"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>