<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="fragment.MessageDetail">

    <RelativeLayout
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B9D6F3"
        android:padding="10dp"
        android:layout_alignParentTop="true">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/backbtn"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUserImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backButton"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            app:cardCornerRadius="25dp"
            android:layout_centerVertical="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/avatar"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cardViewUserImage"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textUserStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#129317"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@+id/customToolbar"
        android:padding="5dp">
    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <EditText
            android:id="@+id/typeMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Type a message"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionSend"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:background="@drawable/typemessagebackground"
            android:textAlignment="textStart"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="55dp"
            android:textColor="@color/black"
            android:textColorHint="#A8A7A7" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/typeMessage"
            android:layout_marginLeft="-50dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/baseline_arrow_circle_right_24"
            android:backgroundTint="#B9D6F3"
            android:contentDescription="@string/sendmessage"
            android:tint="@android:color/white"/>
    </RelativeLayout>

</RelativeLayout>
